--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ title:            Créaphé
 tagline:          Association
 description:      
 url:              http://www.creaphe.com
-baseurl:          http://www.creaphe.com
+baseurl:          
 
 author:
   name:           Alexandre Blanquart
